--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tems",
+  "name": "test1",
   "version": "1.0.2",
-  "description": "Tems Project",
+  "description": "test Project",
   "devDependencies": {
     "angular-mocks": "^1.5.0",
     "grunt": "^0.4.5",
